# barai-relata-chatbot

./: .gitignore  README.md  del.txt  main.py  my_family.csv  pyproject.toml  vector.py
faiss_index/: index.faiss  index.pkl
