[project]
name = "barai-family-teller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
